Bug 100133 - swr_context.cpp:336:44: error: invalid conversion from ‘uint {aka unsigned int}’ to ‘pipe_render_cond_flag’ [-fpermissive]
Summary: swr_context.cpp:336:44: error: invalid conversion from ‘uint {aka unsigned in...
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Drivers/Gallium/swr (show other bugs)
Version: git
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: mesa-dev
QA Contact: mesa-dev
URL:
Whiteboard:
Keywords: bisected, regression
Depends on:
Blocks:
 
Reported: 2017-03-08 21:19 UTC by Vinson Lee
Modified: 2017-03-09 06:18 UTC (History)
2 users (show)

See Also:
i915 platform:
i915 features:


Attachments

Description Vinson Lee 2017-03-08 21:19:44 UTC
mesa: ab12a126fd7b549602ed24f5d7540e0acb0a56e3 (master 17.1.0-devel)

  CXX      libswrAVX_la-swr_context.lo
In file included from swr_context.cpp:24:0:
swr_context.h:162:62: warning: ignoring attributes on template argument ‘PFN_BLEND_JIT_FUNC {aka void (*)(const SWR_BLEND_STATE*, simdvector&, simdvector&, __vector(8) float&, unsigned int, unsigned char*, simdvector&, __vector(4) long long int*, __vector(4) long long int*)}’ [-Wignored-attributes]
    std::unordered_map<BLEND_COMPILE_STATE, PFN_BLEND_JIT_FUNC> *blendJIT;
                                                              ^
swr_context.cpp: In function ‘void swr_blit(pipe_context*, const pipe_blit_info*)’:
swr_context.cpp:336:44: error: invalid conversion from ‘uint {aka unsigned int}’ to ‘pipe_render_cond_flag’ [-fpermissive]
                                       ctx->render_cond_mode);
                                       ~~~~~^~~~~~~~~~~~~~~~
Comment 1 Vinson Lee 2017-03-08 22:37:33 UTC
b0d39384307d979ba85de6c978661e9e58715bec is the first bad commit
commit b0d39384307d979ba85de6c978661e9e58715bec
Author: Brian Paul <brianp@vmware.com>
Date:   Sun Mar 5 13:07:28 2017 -0700

    gallium: s/uint/enum pipe_render_cond_flag/ for set_render_condition()
    
    Reviewed-by: Edward O'Callaghan <funfunctor@folklore1984.net>

:040000 040000 51f5c5dac39b8fd6c444829c83a29b6107ab5a18 77591b3c3cf77a0bf45776ac18972830bc03e8f6 M	src
bisect run success
Comment 2 Vinson Lee 2017-03-09 06:18:42 UTC
commit d64ded7b50d6614b88841383c37fab67d7596c4c
Author: Vinson Lee <vlee@freedesktop.org>
Date:   Wed Mar 8 14:56:04 2017 -0800

    swr: s/uint/enum pipe_render_cond_flag/
    
    Fix build error.
    
    swr_context.cpp: In function ‘void swr_blit(pipe_context*, const pipe_blit_info*)’:
    swr_context.cpp:336:44: error: invalid conversion from ‘uint {aka unsigned int}’ to ‘pipe_render_cond_flag’ [-fpermissive]
                                           ctx->render_cond_mode);
                                           ~~~~~^~~~~~~~~~~~~~~~
    
    Fixes: b0d39384307d ("gallium: s/uint/enum pipe_render_cond_flag/ for set_render_condition()")
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=100133
    Signed-off-by: Vinson Lee <vlee@freedesktop.org>
    Reviewed-by: Roland Scheidegger <sroland@vmware.com>


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.